# django-logfiles

./: LICENSE  README.md  db.sqlite3  pyproject.toml
django-logfiles/: admin.py  models.py  settings.py
example/: settings.py
logfiles/: admin.py  apps.py  models.py  settings.py  tests.py
logfiles/static/admin/css/: logfile.css
