[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-logfiles"
version = "0.0.5"
authors = [
    { name="Ronnie van 't Westeinde", email="info@westeron.net" }
]
description = "Plugin to show logfiles in the admin pane of a django project"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rwestein/django-logfiles"
Issues = "https://github.com/rwestein/django-logfiles/issues"

[tool.hatch.build.targets.wheel]
packages = ["logfiles"]
